[package]
name = "scf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
trie-rs = "0.1.1"
serde = { version = "1.0.164", features = ["derive"] }
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
js-sys = "0.3.63"